test/compile-errors/redundant-purity-specifier.crow
b builtin data

e extern-pointer mut

r record data

u union data
	r
